--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </div>
 
     <!-- 🔸 Botão salvar -->
-    <div class="fixed-bottom p-3 bg-white shadow-sm">
+    <div class="bg-white shadow-sm">
         <button id="btnSalvar" class="btn btn-success btn-lg w-100" disabled>Salvar</button>
     </div>
 
